# opendata-stack-platform

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  analysis.ipynb  create_catalog.sh  docker-compose.yml  flake.nix  progress.txt  prompt-opencode.md  ralph.sh  requirements-dev.txt  requirements.txt  ruff.toml  setup_polaris.sh
.github/: dependabot.yml
dagster-workspace/: dg.toml
dagster-workspace/projects/data_platform/: pyproject.toml
dagster-workspace/projects/data_platform/.dlt/: config.toml
dagster-workspace/projects/data_platform/src/data_platform/defs/dbt/: assets.py  resources.py
dagster-workspace/projects/data_platform/src/data_platform/defs/dlt/: assets.py  definitions.py  taxi_trip_pipeline.py
dagster-workspace/projects/data_platform/src/data_platform/defs/dlt/sources/taxi_trip/: __init__.py
dagster-workspace/projects/data_platform/src/data_platform/defs/sqlmesh/: resources.py
dagster-workspace/projects/data_platform/src/data_platform/defs/taxi/: assets.py  resources.py
dagster-workspace/projects/data_platform/src/data_platform/notebooks/: analysis.ipynb  iceberg.ipynb  polaris_init.ipynb
dagster-workspace/projects/data_platform/src/data_platform/utils/: download_and_upload_file.py  environment_helpers.py  paths.py
dagster-workspace/projects/ml_regression_model/: pyproject.toml
dagster-workspace/projects/ml_regression_model/src/notebooks/: feature_exploration.ipynb
dagster-workspace/projects/ml_regression_model/src/pipeline/: models.py
dagster-workspace/projects/physical_risk_impact/: pyproject.toml
dagster-workspace/projects/physical_risk_impact/src/physical_risk_impact/: definitions.py
dagster-workspace/projects/physical_risk_impact/src/physical_risk_impact/defs/: assets.py  graphs.py
dagster-workspace/projects/physical_risk_impact/src/physical_risk_impact/tests/: test_defs.py
dagster-workspace/projects/streamify/: AGENTS.md  README.md  pyproject.toml  test_run.py  test_sql.py
dagster-workspace/projects/streamify/notebooks/: SPEC.md  __init__.py  config.py  delta.py  delta_workspace.py  iceberg_consistency_model.py  iceberg_partitions_clustering.py  test_bronze.py  test_streaming.py  test_streaming_simple.py  transactional_ledger.py  understanding_iceberg.py
dagster-workspace/projects/streamify/src/streamify/: main.py  seed_redis.py
dagster-workspace/projects/streamify/src/streamify/defs/: __init__.py  bronze_assets.py  definitions.py  dq_checks.py  dq_store.py  gold_assets.py  partitions.py  resources.py  silver_assets.py
dagster-workspace/projects/streamify/src/team_ops/: definitions.py  schemas.py
dagster-workspace/projects/streamify/src/team_ops/defs/: bronze_assets.py  gold_assets.py  maintenance_assets.py  schedules.py
dagster-workspace/projects/streamify/tests/: conftest.py  test_bronze_assets.py  test_dq_checks.py  test_gold_assets.py  test_maintenance_assets.py  test_schedules.py  test_sensors.py  test_silver_assets.py
dagster-workspace/team_climate_risk/physical_risk_impact/: pyproject.toml
dagster-workspace/team_climate_risk/physical_risk_impact/src/physical_risk_impact/: definitions.py
dagster-workspace/team_climate_risk/physical_risk_impact/src/physical_risk_impact/defs/: definitions.py  ops.py  polars_csv_io_manager.py
dagster-workspace/team_data_platform/data_platform/: pyproject.toml
dagster-workspace/team_data_platform/data_platform/src/data_platform/: definitions.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/defs/dbt/: assets.py  definitions.py  resources.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/defs/dlt/: assets.py  definitions.py  resources.py  taxi_trip_pipeline.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/defs/dlt/sources/taxi_trip/: __init__.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/defs/sqlmesh/: assets.py  definitions.py  resources.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/defs/taxi/: assets.py  constants.py  definitions.py  partitions.py  resources.py
dagster-workspace/team_data_platform/data_platform/src/data_platform/notebooks/: iceberg.ipynb  nyc_taxi_trips.py  polaris_init.ipynb
dagster-workspace/team_data_platform/data_platform/src/data_platform/utils/: environment_helpers.py  paths.py
dagster-workspace/team_data_platform/data_platform/tests/: test_defs.py  test_extended_duckdb_resource.py
dagster-workspace/team_data_platform/data_platform/tests/assets/: test_taxi.py
dagster-workspace/team_ops/: AGENTS.md  README.md  pyproject.toml
dagster-workspace/team_ops/notebooks/: test_streaming.py  test_streaming_simple.py
dagster-workspace/team_ops/ralph/: prd.json  progress.txt
dagster-workspace/team_ops/src/team_ops/: batch_compaction.py  definitions.py  hourly_batch_load.py  schemas.py  stream_music_events.py
dagster-workspace/team_ops/src/team_ops/defs/: assets.py  bronze_assets.py  definitions.py  dq_checks.py  dq_store.py  gold_assets.py  maintenance_assets.py  resources.py  schedules.py  sensors.py  silver_assets.py  streaming_assets.py
dagster-workspace/team_ops/src/team_ops/spark_scripts/: __init__.py  common.py  compact_tables.py  deduplicate_events.py  expire_snapshots.py  sessionize_events.py  stream_to_iceberg.py
dagster-workspace/team_ops/tests/: conftest.py  test_bronze_assets.py  test_dq_checks.py  test_gold_assets.py  test_maintenance_assets.py  test_schedules.py  test_sensors.py  test_silver_assets.py
docs/: data_dictionary.md  data_model.md  data_model.sql  kafka-architecture.md  polaris-sts.md  spark-streaming-orchestration-options.md  streamify-architecture.md  stremify-implementation.md
eventsim/: README.md  eventsim.sh
infrastructure/: README.md  iam.tf  main.tf  outputs.tf  s3.tf  snowflake-database.tf  snowflake-privileges.tf  snowflake-stages.tf  snowflake-storage-integration.tf  snowflake-users-roles.tf  variables.tf
minio-config/: polaris-s3-rw-policy.json  s3-rw-policy.json  setup-minio.sh
opendata_stack_platform_dbt/: .sqlfluff  (+5 more)
(+110 files in other folders)
