[project]
name = "data_platform"
version = "0.1.0"
description = "Data platform for NYC taxi data"
requires-python = ">=3.11"
dependencies = [
    # Core data engineering dependencies
    "dagster==1.11.6",
    "dagster-dlt==0.27.6",
    "dagster-polars==0.27.5",
    "dagster-aws==0.27.6",
    "dagster-duckdb==0.27.6",
    "dagster-dbt==0.27.6",
    "dlt[duckdb]>=1.13.0",
    # "connectorx==0.4.2",
    "s3fs==2025.3.0",
    "boto3==1.37.1",
    "aiobotocore==2.21.0",
    "botocore==1.37.1",
    "duckdb==1.3.2",
    "dbt-core==1.10.3",
    "dbt-duckdb==1.9.4",
    "pandas==2.2.3",
    "dagster-dg-cli==1.11.6",
    "sqlmesh[duckdb,snowflake,lsp]>=0.217.0",
    "dagster-sqlmesh @ file:///Users/melchior/Developer/dagster-sqlmesh",
    "enlighten>=1.14.1",
    "fastapi>=0.116.1",
    "snowflake-connector-python>=3.12.0",
    "dlt[snowflake]>=1.13.0",
    "streamlit>=1.42.0",
    "dagster-snowflake>=0.27.6",
    "marimo>=0.16.1",
    "datafusion>=50.0.0",
    "geodatafusion>=0.1.1",
    "lonboard>=0.12.1",
    "matplotlib>=3.10.6",
    "palettable>=3.3.3",
    "pyarrow>=18.1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Development tools
    "dagster-webserver==1.11.6",
    "pre-commit==4.1.0",
    "ruff==0.9.6",
    "streamlit==1.42.0",
    "ipykernel==6.29.5",
    "jupysql==0.10.17",
    "sqlfluff-templater-dbt==3.3.1",
    "pytest==8.3.5",
    "moto[all]==5.1.1",
    "enlighten",
    "python-dotenv==1.0.1",
    "poethepoet>=0.20.0",
]

[project.entry-points]
"dagster_dg_cli.registry_modules" = { data_platform = "data_platform.lib"}

[dependency-groups]
dev = [
    "dagster-webserver==1.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_platform"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
override-dependencies = [
    "sqlmesh[duckdb]>=0.217.0",
]

[tool.hatch.metadata]
allow-direct-references = true
