[project]
name = "ml_regression_model"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.4",
    "bauplan",
    "matplotlib==3.8.1",
    "seaborn==0.13.0",
    "pandas==2.2.0",
    "jupyterlab>=4",
    "streamlit==1.28.1",
    "ipykernel>=6.30.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ml_regression_model"
registry_modules = [
    "ml_regression_model.components.*",
]
