[project]
name = "physical_risk_impact"
requires-python = ">=3.11,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.1",
    "dagster-polars==0.27.1",
    "dagster-aws==0.27.1",
    "polars==1.22.0",
    "s3fs==2025.3.0",
]

[project.entry-points]
"dagster_dg_cli.registry_modules" = { physical_risk_impact = "physical_risk_impact.lib"}

[dependency-groups]
dev = [
    "dagster-webserver==1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "physical_risk_impact"
