[project]
name = "streamify"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.3",
    "dagster-aws==0.28.3",
    "boto3>=1.35.0",
    "pyspark==4.1.1",
    "kafka-python==2.0.2",
    "pyiceberg[pyarrow]==0.8.1",
    "pandas>=1.0.5",
    "pyarrow>=10.0.0",
    "grpcio>=1.48.1",
    "grpcio-status>=1.48.1",
    "googleapis-common-protos>=1.56.4",
    "dagster-pipes>=1.12.3",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "streamify"
