[project]
name = "physical_risk_impact"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-polars",
    "dagster-aws",
    "polars",
    "s3fs"
]

[project.entry-points]
"dagster_dg.plugin" = { physical_risk_impact = "physical_risk_impact.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "physical_risk_impact"
python_environment = "persistent_uv"
