[project]
name = "physical_risk_impact"
requires-python = ">=3.11,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.10.10",
    "dagster-polars==0.26.10",
    "dagster-aws==0.26.10",
    "polars==1.22.0",
    "s3fs==2025.3.0",
]

[project.entry-points]
"dagster_dg.plugin" = { physical_risk_impact = "physical_risk_impact.lib"}

[dependency-groups]
dev = [
    "dagster-webserver==1.10.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "physical_risk_impact"
python_environment = "persistent_uv"
