[project]
name = "data_platform"
requires-python = ">=3.11,<3.13"
version = "0.1.0"
dependencies = [
    # Core data engineering dependencies
    "dagster==1.10.10",
    "dagster-dlt==0.26.10",
    "dagster-polars==0.26.10",
    "dagster-aws==0.26.10",
    "dagster-duckdb==0.26.10",
    "dagster-dbt==0.26.10",
    "dlt[duckdb]>=1.9.0",
    "connectorx==0.4.2",
    "s3fs==2025.3.0",
    "boto3==1.37.1",
    "aiobotocore==2.21.0",
    "botocore==1.37.1",
    "duckdb==1.2.1",
    "dbt-core==1.9.4",
    "dbt-duckdb==1.9.2",
    "pandas==2.2.3"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Development tools
    "dagster-webserver==1.10.10",
    "pre-commit==4.1.0",
    "ruff==0.9.6",
    "streamlit==1.42.0",
    "ipykernel==6.29.5",
    "jupysql==0.10.17",
    "sqlfluff-templater-dbt==3.3.1",
    "pytest==8.3.5",
    "moto[all]==5.1.1",
    "enlighten",
    "python-dotenv==1.0.1",
    "poethepoet>=0.20.0",
]

[project.entry-points]
"dagster_dg.plugin" = { data_platform = "data_platform.lib"}

[dependency-groups]
dev = [
    "dagster-webserver==1.10.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_platform"
python_environment = "persistent_uv"
